@@ -16,6 +16,7 @@ spec/koala/api_base_tests.rb
 spec/koala/graph_and_rest_api/graph_and_rest_api_no_token_tests.rb
 spec/koala/graph_and_rest_api/graph_and_rest_api_with_token_tests.rb
 spec/koala/graph_api/graph_api_no_access_token_tests.rb
+spec/koala/graph_api/graph_api_tests.rb
 spec/koala/graph_api/graph_api_with_access_token_tests.rb
 spec/koala/graph_api/graph_collection_tests.rb
 spec/koala/live_testing_data_helper.rb
@@ -23,8 +24,10 @@ spec/koala/net_http_service_tests.rb
 spec/koala/oauth/oauth_tests.rb
 spec/koala/realtime_updates/realtime_updates_tests.rb
 spec/koala/rest_api/rest_api_no_access_token_tests.rb
+spec/koala/rest_api/rest_api_tests.rb
 spec/koala/rest_api/rest_api_with_access_token_tests.rb
 spec/koala/test_users/test_users_tests.rb
+spec/koala/typhoeus_service_tests.rb
 spec/koala_spec.rb
 spec/koala_spec_helper.rb
 spec/koala_spec_without_mocks.rb
